fixed work info alignment for tablet screen

--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 40px;
+    height: auto;
 
     &:nth-child(odd) {
       flex-direction: column !important;
@@ -44,6 +45,7 @@
 
     .work-info-wrapper {
       text-align: center;
+      margin-bottom: 50px;
       .work-title {
         font-size: 22px;
       }
